# fine-tuning-open-ai-for-rag

./: README.md
fine-tuning-open-ai-for-rag/: pyproject.toml
fine-tuning-open-ai-for-rag/fine_tuning_open_ai_for_rag/: embeddings.py  evaluator.py  main.py  open_ai_finetuner.py  open_ai_service.py  preprocessor.py
fine-tuning-open-ai-for-rag/fine_tuning_open_ai_for_rag/local_cache/: 100_val.json  100_val_ft.json  100_val_ft_few_shot.json
